--- a/style/style.css
+++ b/style/style.css
@@ -76,7 +76,7 @@ header > p {
     margin: auto;
     padding-left: 5px;
     padding-right: 5px;
-    margin-bottom: 30px;
+    padding-bottom: 50px;
 }
 
 nav {
